--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                 <i class="fab fa-twitter"></i>
                 Twitter
             </a>
-            <a href="robertpaulparedes26@gmail.com">
+            <a href="robertpaulparedes26@gmail.com" target="_blank" class="btn contact-details">
                 <i class="fab fa-at"></i>
                 Send a mail
             </a>
-            <a href="tel:0919-656-0285">
+            <a href="tel:0919-656-0285" target="_blank" class="btn contact-details">
                 <i class="fas fa-mobile-alt"></i>
                 Call me
             </a>
