edited email icon

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 Twitter
             </a>
             <a href="robertpaulparedes26@gmail.com" target="_blank" class="btn contact-details">
-                <i class="fab fa-at"></i>
+                <i class="fa fa-at"></i>
                 Send a mail
             </a>
             <a href="tel:0919-656-0285" target="_blank" class="btn contact-details">
