added sticky navbar script

--- a/index.html
+++ b/index.html
@@ -119,5 +119,15 @@
             </a>
         </p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
+    <script>
+        $(window).scroll(function(){
+            if($(window).scrollTop()){
+                $("nav").addClass("red");
+            } else {
+                $("nav").removeClass("red");
+            }
+        })
+    </script>
 </body>
 </html>
