--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paul Website</title>
+    <link rel="shortcut icon" href="images/pp_paul.jpg">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap">
@@ -28,11 +29,11 @@
             These are some of my projects
         </h2>
         <div class="projects-grid">
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" class="project project-tile">
-                <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project">
+            <a href="https://paulkodes.github.io/paulresume/" target="_blank" class="project project-tile">
+                <img class="project-image" src="images/Resume.jpg" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Tribute Page
+                    Resume Page
                     <span class="code">&#47;&gt;</span>
                 </p>
             </a>
